--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <title>Document</title>
-    <link rel="stylesheet" href="css/Web.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div id="wrapper">
